- connection exceptions wrapped in DBAPIError
- ActiveMapper now supports autoloading column definitions from the
database if you supply a __autoload__ = True attribute in your
mapping inner-class.  Currently this does not support reflecting 
any relationships.
- deferred column load could screw up the connection status in 
a flush() under some circumstances, this was fixed

0.2.5
- fixed endless loop bug in select_by(), if the traversal hit
two mappers that referenced each other
- upgraded all unittests to insert './lib/' into sys.path, 
working around new setuptools PYTHONPATH-killing behavior
- further fixes with attributes/dependencies/etc....
- improved error handling for when DynamicMetaData is not connected
- MS-SQL support largely working (tested with pymssql)
- ordering of UPDATE and DELETE statements within groups is now 
in order of primary key values, for more deterministic ordering
- after_insert/delete/update mapper extensions now called per object,
not per-object-per-table
- further fixes/refactorings to mapper compilation 

0.2.4
- try/except when the mapper sets init.__name__ on a mapped class,
supports python 2.3
- fixed bug where threadlocal engine would still autocommit
despite a transaction in progress
- lazy load and deferred load operations require the parent object
to be in a Session to do the operation; whereas before the operation
would just return a blank list or None, it now raises an exception.
- Session.update() is slightly more lenient if the session to which
the given object was formerly attached to was garbage collected;
otherwise still requires you explicitly remove the instance from 
the previous Session.
- fixes to mapper compilation, checking for more error conditions
- small fix to eager loading combined with ordering/limit/offset
- utterly remarkable:  added a single space between 'CREATE TABLE'
and '(<the rest of it>' since *thats how MySQL indicates a non-
reserved word tablename.....* [ticket:206]