@@ -101,9 +101,11 @@ class UnitOfWork(object):
         self.identity_map[key] = obj
 
     def refresh(self, sess, obj):
+        self._validate_obj(obj)
         sess.query(obj.__class__)._get(obj._instance_key, reload=True)
 
     def expire(self, sess, obj):
+        self._validate_obj(obj)
         def exp():
             sess.query(obj.__class__)._get(obj._instance_key, reload=True)
         attribute_manager.trigger_history(obj, exp)
